# BiblePedia

./: .dockerignore  .env  .env.development  .env.example  .env.production  .gitignore  .gitmodules  CLAUDE.MD  Dockerfile  README.md  SPLASHSCREEN_IMPLEMENTATION.md  biome.json  biome.jsonc  bun.lockb  bunfig.toml  package.json  react-router.config.ts  tsconfig.json  turbo.json  vite.config.ts
.claude/: settings.local.json
.junie/memory/: feedback.md
.zed/: settings.json
apps/backend/: .env.development  .env.example  Dockerfile  alembic.ini  docker-compose.yml  firestore.ts  package.json  pyproject.toml  requirements.txt  turbo.json
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_initial_schema.py
apps/backend/api/: book-analyzer.md  python.ts
apps/backend/app/: auth.py  config.py  database.py  main.py  s3_client.py  ssl_cert.py  storage_client.py
apps/backend/app/models/: __init__.py  book.py  commentary.py  dataset.py  translation.py
apps/backend/app/routers/: commentaries.py  datasets.py  epub.py  library.py  sefaria.py  translations.py
apps/backend/app/schemas/: __init__.py  commentary.py  dataset.py  library.py  translation.py
apps/backend/app/scripts/: generate_hebrew_books.py
apps/backend/app/services/: epub.py
apps/backend/services/: books.ts  icons.ts  import.ts  splashscreen.ts
apps/backend/supabase/: config.toml
apps/backend/supabase/migrations/: 20260410224529_initial_schema.sql  20260411171707_remote_schema.sql
apps/backend/supabase/seeds/: BibleBook_rows.sql  BibleChapterAudioUrl_rows.sql
apps/livrea/src-tauri/: Cargo.toml  EPUB_API.md  MIGRATION_SUMMARY.md  README.md  tauri.conf.json
apps/livrea/src-tauri/capabilities/: default.json
apps/livrea/src-tauri/src/: database.rs  epub.rs  lib.rs  main.rs  splashscreen.rs  theme.rs  window_manager.rs
apps/livrea/src-tauri/src-python/: main.py
apps/livrea/src-tauri/src-python/appwrite/: README.md  __init__.py  account.py  client.py  database.py  storage.py  teams.py  utils.py
apps/livrea/src-tauri/src-python/helpers/: __init__.py  utils.py
public/: splashscreen.html
scripts/: setup-env.ts
src/: tauri-commands-example.ts
src-tauri/: .gitignore  Cargo.toml  README_SPLASHSCREEN.md  SPLASHSCREEN.md  splashscreen-examples.md  tauri.conf.json
(+211 files in other folders)
