
[package]
name = "livrea"
version = "0.1.0"
description = "A Tauri App"
authors = ["Emmanuel De Freitas"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "livres_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints.rust]
dead_code = { level = "allow" }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

epubie-lib = "0.1.1"
rusqlite = { version = "0.38", features = ["bundled"] }
thiserror = "2.0.17"
tauri-plugin-os = "2.3.2"
tauri-plugin-python = "0.3.7"
